--- a/local.yml
+++ b/local.yml
@@ -1,8 +1,9 @@
 - hosts: localhost
   vars:
-    source_key: "./.ssh/id_rsa"
-    dest_key: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
-    personal: "{{ lookup('env', 'HOME') }}/personal"
+    home:       "{{ lookup('env', 'HOME') }}"
+    source_key: "./.ssh/id_rsa_github"
+    dest_key:   "{{ home }}/.ssh/id_rsa_github"
+    personal:   "{{ home }}/personal"
   pre_tasks:
   - name: Update Apt
     become: true
@@ -16,16 +17,15 @@
   tasks:
     - include: tasks/ssh.yml
     - include: tasks/git-setup.yml
-    - include: tasks/core-setup.yml
-    - include: tasks/node-setup.yml
-    - include: tasks/npm-packages.yml
-    - include: tasks/zsh-setup.yml
-    - include: tasks/slack-setup.yml
-    - include: tasks/personal-projects.yml
-    - include: tasks/nvim-setup.yml
-    - include: tasks/brave.yml
-    - include: tasks/debugger.yml
-    - include: tasks/dotfiles.yml
-    - include: tasks/productivity-tools.yml
-    - include: tasks/lsp.yml
-
+    # - include: tasks/core-setup.yml
+    # - include: tasks/zsh-setup.yml
+    # - include: tasks/nvim-setup.yml
+    # - include: tasks/dotfiles.yml
+    # - include: tasks/productivity-tools.yml
+    # - include: tasks/lsp.yml
+    # - include: tasks/node-setup.yml
+    # - include: tasks/npm-packages.yml
+    # - include: tasks/slack-setup.yml
+    # - include: tasks/personal-projects.yml
+    # - include: tasks/brave.yml
+    # - include: tasks/debugger.yml
