--- a/tasks/productivity-tools.yml
+++ b/tasks/productivity-tools.yml
@@ -1,23 +1,3 @@
-- name: kdenlive ppa (ppa:kdenlive/kdenlive-stable)
-  become: true
-  apt_repository:
-   repo: ppa:kdenlive/kdenlive-stable
-   state: present
-   update_cache: True
-  tags:
-    - install
-    - productivity
-
-- name: shutter ppa (ppa:linuxuprising/shutter)
-  become: true
-  apt_repository:
-   repo: ppa:linuxuprising/shutter
-   state: present
-   update_cache: True
-  tags:
-    - install
-    - productivity
-
 - name: Install packages
   become: true
   apt:
@@ -25,3 +5,23 @@
   tags:
     - install
     - productivity
+
+# - name: kdenlive ppa (ppa:kdenlive/kdenlive-stable)
+#   become: true
+#   apt_repository:
+#    repo: ppa:kdenlive/kdenlive-stable
+#    state: present
+#    update_cache: True
+#   tags:
+#     - install
+#     - productivity
+# 
+# - name: shutter ppa (ppa:linuxuprising/shutter)
+#   become: true
+#   apt_repository:
+#    repo: ppa:linuxuprising/shutter
+#    state: present
+#    update_cache: True
+#   tags:
+#     - install
+#     - productivity
