--- a/local.yml
+++ b/local.yml
@@ -17,11 +17,11 @@
   tasks:
     - include: tasks/ssh.yml
     - include: tasks/git-setup.yml
-    # - include: tasks/core-setup.yml
+    - include: tasks/core-setup.yml
     # - include: tasks/zsh-setup.yml
-    # - include: tasks/nvim-setup.yml
-    # - include: tasks/dotfiles.yml
-    # - include: tasks/productivity-tools.yml
+    - include: tasks/nvim-setup.yml
+    - include: tasks/dotfiles.yml
+    - include: tasks/productivity-tools.yml
     # - include: tasks/lsp.yml
     # - include: tasks/node-setup.yml
     # - include: tasks/npm-packages.yml
