--- a/tasks/core-setup.yml
+++ b/tasks/core-setup.yml
@@ -19,10 +19,20 @@
 - name: Install System Packages 3 (the rest)
   become: true
   apt:
-    name: [ "compton", "curl", "htop", "golang", "lsof", "i3", "ccache", "ninja-build", "python3-pip", "dconf-editor", "nvidia-settings", "pavucontrol", "moreutils", "clangd", "ubuntu-mate-desktop" ]
+    name: [ "curl", "htop", "lsof", "ccache", "ninja-build", "python3-pip", "moreutils", "clangd", ]
   tags:
     - install
     - core
+
+# Below installations not required for a headless installation
+# Todo: Have a tag for a headless and non-headless install
+# - name: Install System Packages 4 (desktop environment applications)
+#   become: true
+#   apt:
+#     name: [ "compton", "golang", "i3", "dconf-editor", "nvidia-settings", "pavucontrol", "ubuntu-mate-desktop" ]
+#   tags:
+#     - install
+#     - core
 
 - name: Install Clang
   become: true
@@ -33,15 +43,16 @@
     - neovim
     - core
 
-- name: dconf i3
-  shell: dconf write /org/mate/desktop/session/required-components/windowmanager "'i3'"
-  tags:
-    - install
-    - core
-
-- name: dconf i3
-  shell: dconf write /org/mate/desktop/background/show-desktop-icons "false"
-  tags:
-    - install
-    - core
+# Not required for headless installation
+# - name: dconf i3
+#   shell: dconf write /org/mate/desktop/session/required-components/windowmanager "'i3'"
+#   tags:
+#     - install
+#     - core
+# 
+# - name: dconf i3
+#   shell: dconf write /org/mate/desktop/background/show-desktop-icons "false"
+#   tags:
+#     - install
+#     - core
 
