--- a/tasks/nvim-setup.yml
+++ b/tasks/nvim-setup.yml
@@ -3,13 +3,16 @@
   tags:
     - install
     - neovim
-- name: Get Packer
-  ansible.builtin.git:
-    repo: 'https://github.com/wbthomason/packer.nvim'
-    dest: "{{ lookup('env', 'HOME') }}/.local/share/nvim/site/pack/packer/start/packer.nvim"
-  tags:
-    - install
-    - neovim
+
+# I don't use packer
+# - name: Get Packer
+#   ansible.builtin.git:
+#     repo: 'https://github.com/wbthomason/packer.nvim'
+#     dest: "{{ lookup('env', 'HOME') }}/.local/share/nvim/site/pack/packer/start/packer.nvim"
+#   tags:
+#     - install
+#     - neovim
+
 - name: Clone Neovim
   ansible.builtin.git:
     repo: 'https://github.com/neovim/neovim.git'
@@ -17,26 +20,29 @@
   tags:
     - install
     - neovim
+
 - name: Build neovim
   shell: "cd {{ lookup('env', 'HOME') }}/neovim && make -j 20"
   tags:
     - install
     - neovim
+
 - name: Install neovim
   become: true
   shell: "cd {{ lookup('env', 'HOME') }}/neovim && make install"
   tags:
     - install
     - neovim
-- name: Neovim Plugin Development 1
-  become: true
-  apt: name=luarocks
-  tags:
-    - install
-    - neovim
-- name: Neovim Plugin Development 2 luacheck
-  become: true
-  shell: luarocks install luacheck
-  tags:
-    - install
-    - neovim
+
+# - name: Neovim Plugin Development 1
+#   become: true
+#   apt: name=luarocks
+#   tags:
+#     - install
+#     - neovim
+# - name: Neovim Plugin Development 2 luacheck
+#   become: true
+#   shell: luarocks install luacheck
+#   tags:
+#     - install
+#     - neovim
