Some packages dont work without npm, properly using home env variable, installing tpm

--- a/local.yml
+++ b/local.yml
@@ -23,7 +23,7 @@
     - include: tasks/dotfiles.yml
     - include: tasks/productivity-tools.yml
     # - include: tasks/lsp.yml
-    # - include: tasks/node-setup.yml
+    - include: tasks/node-setup.yml
     # - include: tasks/npm-packages.yml
     # - include: tasks/slack-setup.yml
     # - include: tasks/personal-projects.yml
