--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -8,7 +8,7 @@
 - name: Cloning .dotfiles
   ansible.builtin.git:
     repo: 'git@github.com:maxestorr/.dotfiles.git'
-    dest: "{{ lookup('env', 'HOME') }}/.dotfiles"
+    dest: "{{ hosts }}/.dotfiles"
     recursive: yes
     update: yes
     accept_hostkey: yes
