Corrected errors at runtime

--- a/tasks/core-setup.yml
+++ b/tasks/core-setup.yml
@@ -37,14 +37,14 @@
 #     - install
 #     - core
 
-- name: Install Clang
-  become: true
-  apt:
-    name: ["clang", "clang-11", "clang-12", "clangd", "clangd-10", "clangd-11", "clangd-12"]
-  tags:
-    - install
-    - neovim
-    - core
+# - name: Install Clang
+#   become: true
+#   apt:
+#     name: ["clang", "clang-11", "clang-12", "clangd", "clangd-10", "clangd-11", "clangd-12"]
+#   tags:
+#     - install
+#     - neovim
+#     - core
 
 # Not required for headless installation
 # - name: dconf i3
