--- a/tasks/nvim-setup.yml
+++ b/tasks/nvim-setup.yml
@@ -8,7 +8,7 @@
 # - name: Get Packer
 #   ansible.builtin.git:
 #     repo: 'https://github.com/wbthomason/packer.nvim'
-#     dest: "{{ lookup('env', 'HOME') }}/.local/share/nvim/site/pack/packer/start/packer.nvim"
+#     dest: "{{ home }}/.local/share/nvim/site/pack/packer/start/packer.nvim"
 #   tags:
 #     - install
 #     - neovim
@@ -16,20 +16,20 @@
 - name: Clone Neovim
   ansible.builtin.git:
     repo: 'https://github.com/neovim/neovim.git'
-    dest: "{{ lookup('env', 'HOME') }}/neovim"
+    dest: "{{ home }}/neovim"
   tags:
     - install
     - neovim
 
 - name: Build neovim
-  shell: "cd {{ lookup('env', 'HOME') }}/neovim && make -j 20"
+  shell: "cd {{ home }}/neovim && make -j 20"
   tags:
     - install
     - neovim
 
 - name: Install neovim
   become: true
-  shell: "cd {{ lookup('env', 'HOME') }}/neovim && make install"
+  shell: "cd {{ home }}/neovim && make install"
   tags:
     - install
     - neovim
