--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -44,4 +44,4 @@
     state: present
     key: "{{ lookup('file', item) }}"
   with_fileglob:
-    - "{{ lookup('env', 'HOME') }}/.ssh/*.pub"
+    - "{{ home }}/.ssh/*.pub"
