Install exa to replace ls

--- a/tasks/productivity-tools.yml
+++ b/tasks/productivity-tools.yml
@@ -2,8 +2,7 @@
   become: true
   apt:
     name: [ "tmux", "wireshark", "fzf", "kdenlive", "gimp", "xclip", "screenkey", 
-      "tldr", "ripgrep", "bat", "ranger", "jq", 
-    ]
+      "tldr", "ripgrep", "bat", "ranger", "jq", "exa", ]
   tags:
     - install
     - productivity
