add release tag when building neovim
prevents excessive logs which amount to thousands of MB over time

--- a/tasks/nvim-setup.yml
+++ b/tasks/nvim-setup.yml
@@ -22,7 +22,7 @@
     - neovim
 
 - name: Build neovim
-  shell: "cd {{ home }}/neovim && make -j 20"
+  shell: "sudo make CMAKE_BUILD_TYPE=RelWithDebInfo -j 20"
   tags:
     - install
     - neovim
