--- a/tasks/productivity-tools.yml
+++ b/tasks/productivity-tools.yml
@@ -2,10 +2,26 @@
   become: true
   apt:
     name: [ "tmux", "wireshark", "fzf", "kdenlive", "gimp", "xclip", "screenkey", 
-      "tldr", "ripgrep", "bat", "ranger", "jq", "exa", ]
+      "tldr", "ripgrep", "bat", "ranger", "jq", "eza", ]
   tags:
     - install
     - productivity
+
+- name: Does PyEnv exist?
+  stat:
+    path: "{{ home }}/.pyenv"
+  register: pyenv_dir
+  tags:
+    - install
+    - productivity
+
+- name: Install pyenv
+  become: true
+  ansible.builtin.shell: curl https://pyenv.run | bash
+  tags:
+    - install
+    - productivity
+  when: pyenv_dir.stat.exists == False
 
 - name: Does TPM exist?
   stat:
