--- a/tasks/productivity-tools.yml
+++ b/tasks/productivity-tools.yml
@@ -2,7 +2,7 @@
   become: true
   apt:
     name: [ "tmux", "wireshark", "fzf", "kdenlive", "gimp", "xclip", "screenkey", 
-      "tldr", "ripgrep", "bat", "ranger", "jq", "eza", ]
+      "tldr", "ripgrep", "bat", "ranger", "jq", "eza", "fd-find", ]
   tags:
     - install
     - productivity
