install uv and poetry

--- a/tasks/productivity-tools.yml
+++ b/tasks/productivity-tools.yml
@@ -23,6 +23,38 @@
     - productivity
   when: pyenv_dir.stat.exists == False
 
+- name: Does uv exist?
+  stat:
+    path: "{{ home }}/.local/bin/uv"
+  register: uv_dir
+  tags:
+    - install
+    - productivity
+
+- name: Install uv
+  become: true
+  ansible.builtin.shell: curl -LsSf https://astral.sh/uv/install.sh | sh
+  tags:
+    - install
+    - productivity
+  when: uv_dir.stat.exists == False
+
+- name: Does Poetry exist
+  stat:
+    path: "{{ home }}/.local/bin/poetry"
+  register: poetry_dir
+  tags:
+    - install
+    - productivity
+
+- name: Install Poetry
+  become: true
+  ansible.builtin.shell: uv tool install poetry
+  tags:
+    - install
+    - productivity
+  when: poetry_dir.stat.exists == False
+  
 - name: Does TPM exist?
   stat:
     path: "{{ home }}/.tmux/plugins/tpm"
