--- a/local.yml
+++ b/local.yml
@@ -1,34 +1,45 @@
 - hosts: localhost
+  gather_facts: yes  # Gather host information, e.g. os_family
   vars:
     home:       "{{ lookup('env', 'HOME') }}"
     source_key: "./.ssh/id_rsa_github"
     dest_key:   "{{ home }}/.ssh/id_rsa_github"
     personal:   "{{ home }}/personal"
-  pre_tasks:
-  - name: Update Apt
-    become: true
-    apt:
-      force_apt_get: true
-      update_cache: true
-      state: present
-    tags:
-      - install
-      - core
+
   tasks:
-    # TODO: None of the tasks below are named/tagged
-    # assuming include_tasks is not proper method
-    # e.g. run `ansible-playbook --list-tasks local.yml`
-    - include_tasks: tasks/ssh.yml
-    - include_tasks: tasks/git-setup.yml
-    - include_tasks: tasks/core-setup.yml
-    # - include_tasks: tasks/zsh-setup.yml
-    - include_tasks: tasks/nvim-setup.yml
-    - include_tasks: tasks/dotfiles.yml
-    - include_tasks: tasks/productivity-tools.yml
-    # - include_tasks: tasks/lsp.yml
-    - include_tasks: tasks/node-setup.yml
-    # - include_tasks: tasks/npm-packages.yml
-    # - include_tasks: tasks/slack-setup.yml
-    # - include_tasks: tasks/personal-projects.yml
-    # - include_tasks: tasks/brave.yml
-    # - include_tasks: tasks/debugger.yml
+    - name: Check OS Type
+      debug:
+        msg: "Detected OS: {{ ansible_facts['os_family'] }}"
+
+    - name: Run tasks for Ubuntu
+      when: ansible_facts['os_family'] == "Debian"
+      block:
+        - name: Update Apt
+          become: true
+          apt:
+            force_apt_get: true
+            update_cache: true
+            state: present
+          tags:
+            - install
+            - core
+
+        - include_tasks: tasks/ssh.yml
+        - include_tasks: tasks/git-setup.yml
+        - include_tasks: tasks/core-setup.yml
+        - include_tasks: tasks/nvim-setup.yml
+        - include_tasks: tasks/dotfiles.yml
+        - include_tasks: tasks/productivity-tools.yml
+        - include_tasks: tasks/node-setup.yml
+
+    - name: Run tasks for macOS
+      when: ansible_facts['os_family'] == "Darwin"
+      block:
+        - name: Dummy task for macOS
+          debug:
+            msg: "This is a placeholder for macOS tasks."
+
+        - include_tasks: tasks/ssh.yml
+        - include_tasks: tasks/git-setup.yml
+        - include_tasks: tasks/nvim-setup.yml
+        - include_tasks: tasks/dotfiles.yml
