move tpm to its own task

--- a/local.yml
+++ b/local.yml
@@ -71,5 +71,6 @@
         - include_tasks: tasks/git-setup.yml
         - include_tasks: tasks/nvim-setup.yml
         #- include_tasks: tasks/dotfiles.yml
+        #- include_tasks: tasks/tpm.yml
         #- include_tasks: tasks/productivity-tools.yml
         #- include_tasks: tasks/node-setup.yml
