--- a/local.yml
+++ b/local.yml
@@ -70,7 +70,9 @@
         - include_tasks: tasks/ssh.yml
         - include_tasks: tasks/git-setup.yml
         - include_tasks: tasks/nvim-setup.yml
-        #- include_tasks: tasks/dotfiles.yml
-        #- include_tasks: tasks/tpm.yml
+        - include_tasks: tasks/dotfiles.yml
+        - include_tasks: tasks/tpm.yml
+        # TODO: Remove unused files
         #- include_tasks: tasks/productivity-tools.yml
         #- include_tasks: tasks/node-setup.yml
+
