Including neovim build requirements for debian

--- a/packages.yml
+++ b/packages.yml
@@ -8,11 +8,27 @@ common:
   - stow
   - curl
   - unzip
+  - tree
 
 debian:
   - python3-poetry
   - wslu
   - nodejs
+
+  # PyEnv requirements for Ubuntu
+  - build-essential
+  - libssl-dev
+  - zlib1g-dev
+  - libbz2-dev
+  - libreadline-dev
+  - libsqlite3-dev
+  - libncursesw5-dev
+  - xz-utils
+  - tk-dev
+  - libxml2-dev
+  - libxmlsec1-dev
+  - libffi-dev
+  - liblzma-dev
 
 macos:
   # Terminal applications
