--- a/tasks/tpm.yml
+++ b/tasks/tpm.yml
@@ -1,5 +1,5 @@
 - name: Setup tmux plugin manager (tpm)
-  ansible.builtin.git:
+  git:
     repo: 'https://github.com/tmux-plugins/tpm'
     dest: "{{ home }}/.config/tmux/plugins/tpm"
 
