--- a/tasks/lazygit.yml
+++ b/tasks/lazygit.yml
@@ -1,5 +1,6 @@
 - name: Install Lazygit on Debian
   shell: |
+    cd {{ personal }}
     LAZYGIT_VERSION=$(curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest" | \grep -Po '"tag_name": *"v\K[^"]*')
     curl -Lo lazygit.tar.gz "https://github.com/jesseduffield/lazygit/releases/download/v${LAZYGIT_VERSION}/lazygit_${LAZYGIT_VERSION}_Linux_x86_64.tar.gz"
     tar xf lazygit.tar.gz lazygit
