--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,9 @@
 Host github.com
  HostName github.com
+ User maxestorr@gmail.com
  IdentityFile ~/.ssh/id_rsa_github
 
+Host bitbucket.com
+ HostName bitbucket.com
+ User max.storr-vijay@withintelligence.com
+ IdentityFile ~/.ssh/id_rsa_bitbucket
